updated to java 18